# lms-ai-service

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/health/: router.py
app/config/: database.py  redis.py  settings.py
app/core/: auth.py  exceptions.py  middleware.py  utils.py
app/tasks/: background.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
requirements/: base.txt  development.txt  production.txt
scripts/: download_models.py  init_db.py  migrate.py  start-dev.sh  start.sh  validate_setup.py  wait_for_db.py
